fix headline spacing

--- a/css/style.less
+++ b/css/style.less
@@ -764,7 +764,7 @@ hr {
 
 
 .leader {
-  margin-top: 12px;
+  margin-top: 0;
   margin-bottom: 0;
   line-height: 1em;
 }
@@ -805,7 +805,7 @@ hr {
 
 .layout-1c {
   #primary {
-    padding: 0;
+    padding: 20px 0 0;
   }
   .entry-header, .entry-content {
     padding: 0 25px;
